--- a/index.html
+++ b/index.html
@@ -1,31 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Work Day Scheduler</title>
-</head>
 
-<body>
+    <title>Work Day Scheduler</title>
+  </head>
+
+  <body>
     <header class="jumbotron">
-        <h1 class="display-3">Work Day Scheduler</h1>
-        <p class="lead">A simple calendar app for scheduling your work day</p>
-        <p id="currentDay" class="lead"></p>
+      <h1 class="display-3">Work Day Scheduler</h1>
+      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-        <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="col-XL-4">9:00 AM</div>
+
+        <div class="col-XL-4">
+          <input id="9" />
+        </div>
+
+        <div class="col-XL-4">
+          <button>Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-XL-4">10:00 AM</div>
+
+        <div class="col-XL-4">
+          <input id="10" />
+        </div>
+
+        <div class="col-XL-4">
+          <button>Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-XL-4">11:00 AM</div>
+
+        <div class="col-XL-4">
+          <input id="11" />
+        </div>
+
+        <div class="col-XL-4">
+          <button>Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-XL-4">12:00 PM</div>
+
+        <div class="col-XL-4">
+          <input id="12" />
+        </div>
+
+        <div class="col-XL-4">
+          <button>Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-XL-4">1:00 PM</div>
+
+        <div class="col-XL-4">
+          <input id="13" />
+        </div>
+
+        <div class="col-XL-4">
+          <button>Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-XL-4">2:00 PM</div>
+
+        <div class="col-XL-4">
+          <input id="14" />
+        </div>
+
+        <div class="col-XL-4">
+          <button>Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-XL-4">3:00 PM</div>
+
+        <div class="col-XL-4">
+          <input id="15" />
+        </div>
+
+        <div class="col-XL-4">
+          <button>Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-XL-4">4:00 PM</div>
+
+        <div class="col-XL-4">
+          <input id="16" />
+        </div>
+
+        <div class="col-XL-4">
+          <button>Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-XL-4">5:00 PM</div>
+
+        <div class="col-XL-4">
+          <input id="17" />
+        </div>
+
+        <div class="col-XL-4">
+          <button>Save</button>
+        </div>
+      </div>
+
+      <!-- Timeblocks go here -->
     </div>
 
-    <script src="assets/js/app.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-</body>
-
+    <script src="assets/js/app.js"></script>
+  </body>
 </html>
