--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="col-XL-4">
-          <button>Save</button>
+          <button class="saveBtn" data-hour="9">Save</button>
         </div>
       </div>
 
@@ -50,7 +50,7 @@
         </div>
 
         <div class="col-XL-4">
-          <button>Save</button>
+          <button class="saveBtn" data-hour="10">Save</button>
         </div>
       </div>
 
@@ -62,7 +62,7 @@
         </div>
 
         <div class="col-XL-4">
-          <button>Save</button>
+          <button class="saveBtn" data-hour="11">Save</button>
         </div>
       </div>
 
@@ -74,7 +74,7 @@
         </div>
 
         <div class="col-XL-4">
-          <button>Save</button>
+          <button class="saveBtn" data-hour="12">Save</button>
         </div>
       </div>
 
@@ -86,7 +86,7 @@
         </div>
 
         <div class="col-XL-4">
-          <button>Save</button>
+          <button class="saveBtn" data-hour="13">Save</button>
         </div>
       </div>
 
@@ -98,7 +98,7 @@
         </div>
 
         <div class="col-XL-4">
-          <button>Save</button>
+          <button class="saveBtn" data-hour="14">Save</button>
         </div>
       </div>
 
@@ -110,7 +110,7 @@
         </div>
 
         <div class="col-XL-4">
-          <button>Save</button>
+          <button class="saveBtn" data-hour="15">Save</button>
         </div>
       </div>
 
@@ -122,7 +122,7 @@
         </div>
 
         <div class="col-XL-4">
-          <button>Save</button>
+          <button class="saveBtn" data-hour="16">Save</button>
         </div>
       </div>
 
@@ -134,7 +134,7 @@
         </div>
 
         <div class="col-XL-4">
-          <button>Save</button>
+          <button class="saveBtn" data-hour="17">Save</button>
         </div>
       </div>
 
